--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,13 +40,14 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+    --primary-glow: radial-gradient(rgba(175, 1, 255, 0.623), rgba(211, 133, 31, 0.192));
     --secondary-glow: linear-gradient(
       to bottom right,
       rgba(1, 65, 255, 0),
@@ -61,7 +62,7 @@
       #ffffff40,
       #ffffff30,
       #ffffff20,
-      #ffffff10,
+      #ffffffa9,
       #ffffff10,
       #ffffff80
     );
@@ -70,7 +71,9 @@
     --callout-border-rgb: 108, 108, 108;
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
+  
   }
+
 }
 
 * {
@@ -98,6 +101,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+.header{
+  height:  10vh;
+  background-color: #0d54bee5;
+  color:#faf5f5e7;
+}
+
+input{
+  padding: 5px;
 }
 
 @media (prefers-color-scheme: dark) {
