--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,8 +6,8 @@
     height: 80px;
     padding: 20px;
     width:100%;
-  
-}
+    margin-bottom: 80px;
+    }
 
 .navbar {
     width: 100%;
@@ -45,7 +45,7 @@
 
 @media screen and (min-width:760px){
    .container{
-    margin: 60px 0 80px 0;
+    margin-top: 60px ;
    }
    
     .navlist{
