--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -3,24 +3,43 @@
     flex-direction: column;
     width: 90%;
     margin: 0 auto;
+    font-size: 1.4rem;
+    justify-content: center;
   }
-  .form > h2{
-    margin-bottom:
-      20px; 
+.formheader{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    
   }
 
+  .formparagraph {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 5px 0 20px 0;
+  }
+  .formparagraph>span {
+    margin-left: 9px;
+  }
   .form > button{
     width: 60%;
     margin:  0 auto;
+    font-size: 1.2rem;
   }
 
+  .form > input {
+    font-size: 1.2rem;
+  }
   @media screen and (min-width: 765px){
     .form{
-      width: 40%;
+      width: 55%;
     }
    .form > input, .form > button{
     padding:1.2%;
     font-size: 1.6rem;
     border:0.2px solid var(--dark);
     }
+  
   }
