--- a/src/app/feed/layout.module.css
+++ b/src/app/feed/layout.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     padding: 1.3rem;
     min-height: 100vh;
   }
