--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,38 @@
 :root {
   --max-width: 1100px;
 
-  --light:#fff4e0;
---dark: #4d4d4d;
---blue:#146c94;
---green: #698269 ;
-
+  --light: #fff4e0;
+  --dark: #4d4d4d;
+  --blue: #146c94;
+  --green: #698269;
+  --red: #ad4f4f;
 }
+
 * {
   margin: 0;
-  padding:0;
+  padding: 0;
   box-sizing: border-box;
 }
-body{
+
+body {
   background-color: var(--light);
+  color: var(--dark);
 }
-a{ text-decoration: none}
-li{list-style:none}
-input, button{ 
-  padding: 3%;  margin-bottom: 20px; 
-  border-radius: 10px; border: 0.2px solid var(--dark); }
+
+a {
+  text-decoration: none;
+  color: var(--blue);
+}
+
+li {
+  list-style: none
+}
+
+input,
+button {
+  padding: 3%;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  border: none;
+  box-shadow:0 4px 8px 0 rgba(0,0,0,0.2);
+}
