--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,61 +1,80 @@
 .container {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     background-color: var(--light);
     height: 80px;
     padding: 20px;
-    width:100%;
+    width: 100%;
     margin-bottom: 80px;
-    }
+}
 
 .navbar {
     width: 100%;
     margin: 30px 0;
+
 }
 
 .navlist {
-    display:flex;
+    display: flex;
     flex-direction: row;
     font-weight: bolder;
     align-items: center;
     justify-content: space-between;
-  
+
 }
 
-.logo{
-   font-size:3rem; 
-   font-weight:bolder;
+.logo {
+    font-size: 3rem;
+    font-weight: bolder;
 }
+
 .account {
     font-size: 1.3rem;
+    display: inline-block;
 }
 
 .link {
     font-size: 1rem;
 }
 
-.link>a {
+.link a {
     color: var(--blue);
 }
 
-.link>a:hover {
+.link a:hover {
     color: var(--dark);
 }
 
-@media screen and (min-width:760px){
-   .container{
-    margin-top: 60px ;
-   }
-   
-    .navlist{
-    width: 70%;
-    margin: 0 auto;
-   }
-    .account{
+.dropdownItems {
+    display: none;
+    position: absolute;
+    background-color: var(--light);
+    height: fit-content;
+    padding: 10px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 6;
+    font-size: 1.3em;
+}
+
+.dropdown:hover .dropdownItems {
+    display: block;
+}
+
+@media screen and (min-width:760px) {
+    .navlist {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .account {
         font-size: 2.2rem;
     }
-    .link{
+    .dropdownItems {
+        padding: 20px;
+    }
+
+    .link {
         font-size: 1.6rem;
     }
 }
