fetching posts and all users, change some styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,9 @@ button {
   border: none;
   box-shadow:0 4px 8px 0 rgba(0,0,0,0.2);
 }
+
+@media screen and (min-width: 650px){
+  input, button {
+    padding: 1%;
+  }
+}
