--- a/src/app/account/layout.module.css
+++ b/src/app/account/layout.module.css
@@ -3,6 +3,6 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 1.3rem;
-    min-height: 100vh;
+    margin-top: 11rem;
   }
   
