--- a/src/app/feed/layout.module.css
+++ b/src/app/feed/layout.module.css
@@ -1,9 +1,8 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.3rem;
-    min-height: 100vh;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.3rem;
+  margin-top: 10rem;
+}
