set cookie on login, add error and loadingpagge(not working correctly right now), addd about-page to get rid of warning

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,4 +4,20 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-margin-top: 11rem;}
+  margin-top: 11rem;
+}
+.loadingMain{
+  .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    margin-top: 11rem;
+    background-color: var(--green);
+  }
+}
+.loading{
+  color: var(--light);
+  font-weight: bolder;
+}
