--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,13 @@
 }
 
 body {
-  background-color: var(--light);
-  color: var(--dark);
+  background-color: var(--blue);
+  color: var(--light);
 }
 
 a {
   text-decoration: none;
-  color: var(--blue);
+  color: var(--light);
 }
 
 li {
