--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--light);
+    background-color: var(--blue);
     height: 80px;
     padding: 20px;
     width: 100%;
@@ -38,18 +38,10 @@
     font-size: 1rem;
 }
 
-.link a {
-    color: var(--blue);
-}
-
-.link a:hover {
-    color: var(--dark);
-}
-
 .dropdownItems {
     display: none;
     position: absolute;
-    background-color: var(--light);
+    background-color: var(--blue);
     height: fit-content;
     padding: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
