--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,26 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  min-height: 100vh;
+  height: 100vh;
+}
+.section{
+  margin-top: 50px;
+  display:flex;
+  flex-direction: column;
+}
+.actions{
+  margin: 30px 0;
+}
+.actions:hover{
+ text-decoration: underline;
+
+}
+@media screen and (min-width: 500px) {
+  .section{
+
+    font-size: 1.8rem;
+  }
+  
 }
