--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -4,9 +4,9 @@
   display: flex;
     flex-direction: column;
 }
-.form h2 {
-  display: flex;
-  justify-content: center;
+.formHeader {
+ 
+  text-align: center;
   flex-wrap: wrap;
   margin-bottom: 20px;
 
@@ -32,7 +32,7 @@
 }
 
 .form input {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .errorMessage {
@@ -67,16 +67,13 @@
     font-size: 1.2rem;
   }
 
-  .form > input {
-    font-size: 1.2rem;
-  }
+
   @media screen and (min-width: 765px){
     .form{
       width: 55%;
     }
    .form > input, .form > button{
-    padding:1.2%;
-    font-size: 1.6rem;
+    padding:2%;
     border:0.2px solid var(--dark);
     }
   
