--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -24,8 +24,9 @@
     width: 90%;
 }
 
-.close {
+#submit {
     margin-top: 10px;
+    background-color: var(--green);
 }
 .closeBtn{
     position: fixed;
@@ -53,4 +54,47 @@
 
 .form input {
     font-size: 1rem;
+}
+
+.actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.feedCard {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 20px 0;
+    padding: 5px;
+    background-color: var(--light);
+    color: var(--dark);
+}
+
+.postInfo {
+    display: grid;
+    grid-template-columns: 75% 25%;
+}
+
+.subject,
+.cardHeader {
+    margin-top: 10px;
+    max-width: 45ch;
+}
+
+.cardFooter {
+    margin-top: 10px;
+    border-top: .7px dashed var(--dark);
+    display: grid;
+    grid-template-columns: 75% 25%;
+}
+
+.details,
+.icon {
+    font-size: .8em;
+    margin-top: 10px;
+    margin-left: 5px;
+}
+
+.icon {
+    color: var(--contrast);
 }
