--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -98,6 +98,18 @@
 .icon {
   color: var(--contrast);
 }
+
+@media screen and (min-width: 500px) {
+  .modalContent {
+    width: 50%;
+  }
+  .modalContent h3 {
+    margin: 20px 0;
+  }
+  .form {
+    width: 60%;
+  }
+}
 /*
 
 */
