--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,12 +10,28 @@
   display: flex;
   flex-direction: column;
 }
+.imgFilter {
+  background-color: rgba(238, 18, 18, 0.72);
+  z-index: 12;
+}
 .actions {
   margin: 30px 0;
   color: var(--dark);
 }
 .actions:hover {
   text-decoration: underline;
+}
+.actions a {
+  color: var(--contrast);
+  font-size: 1.6em;
+  font-weight: bolder;
+  margin-top: 20px;
+}
+
+.bgImage {
+  position: absolute;
+  z-index: -2;
+  inset: 0;
 }
 @media screen and (min-width: 500px) {
   .section {
