--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,77 +1,105 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: transparent;
-    height: 80px;
-    padding: 20px;
-    width: 100%;
-    margin-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 80px;
+  padding: 20px;
+  width: 100%;
+  margin-bottom: 80px;
 }
 
 .navbar {
-    width: 100%;
-    margin: 30px 0;
-
+  width: 100%;
+  margin: 30px 0;
 }
 
 .navlist {
-    display: flex;
-    flex-direction: row;
-    font-weight: bolder;
-    align-items: center;
-    justify-content: space-between;
-
+  display: flex;
+  flex-direction: row;
+  font-weight: bolder;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-.navItem{
-    font-size: 1rem;;
+.navItem {
+  font-size: 1rem;
 }
 
 .logo {
-    font-size: 2em;
-    font-weight: bolder;
+  font-size: 2em;
+  font-weight: bolder;
 }
-
-.account {
-    font-size: 1.3rem;
-    display: inline-block;
-}
-
 
 .dropdownItems {
-    display: none;
-    position: absolute;
-    background-color: #4d4d4dac;
-    height: fit-content;
-    padding: 10px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 6;
-    font-size: 1.3em;
+  display: none;
+  position: absolute;
+  background-color: var(--dark);
+  height: fit-content;
+  padding: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 6;
+  font-size: 1.3em;
 }
-
+.dropdownItems .navItem {
+  margin: 20px 0;
+}
+.navItem > .dropBtn {
+  color: var(--light);
+  font-weight: bold;
+  border: none;
+  background-color: transparent;
+  box-shadow: none;
+  font-size: 1rem;
+  display: inline-block;
+}
+.account {
+  font-size: 1.3rem;
+  display: inline-block;
+}
 .dropdown:hover .dropdownItems {
-    display: block;
+  display: block;
 }
 
-@media screen and (min-width:760px) {
+@media screen and (min-width: 500px) {
+  .logo {
+    font-size: 3em;
+  }
+  .navlist {
+    width: 65%;
+    margin: 0 auto;
+  }
 
-    .logo{
-        font-size:3em;
-    }
-    .navlist {
-        width: 70%;
-        margin: 0 auto;
-    }
+  .dropdownItems {
+    padding: 20px;
+  }
 
-    .account {
-        font-size: 2.2rem;
-    }
-    .dropdownItems {
-        padding: 20px;
-    }
+  .navItem > .dropBtn {
+    font-size: 1.5em;
+  }
+  .navItem a,
+  .navItem > .dropBtn {
+    font-size: 1.5em;
+    position: relative;
+    padding: 0 20px;
+  }
+  .navItem a::before,
+  .navItem > .dropBtn::before {
+    margin: 0;
+    padding: 0;
+  }
+  .navItem a::after,
+  .navItem > .dropBtn::after {
+    content: "";
+    position: absolute;
+    background-color: var(--contrast);
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.4s;
+  }
 
-
-    .navItem:hover{
-        text-decoration: underline;
-    }
+  .navItem a:hover::after,
+  .navItem > .dropBtn:hover:after {
+    width: 100%;
+  }
 }
