--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,15 +1,15 @@
-
-.form{
+.form {
   width: 100%;
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
 }
 .formHeader {
- 
   text-align: center;
   flex-wrap: wrap;
   margin-bottom: 20px;
-
+}
+.form label {
+  display: none;
 }
 
 .formParagraph {
@@ -19,7 +19,7 @@
   margin: 5px 0 20px 0;
 }
 
-.formParagraph>span {
+.formParagraph > span {
   margin-left: 9px;
 }
 
@@ -40,7 +40,7 @@
   padding: 4% 2%;
   color: var(--light);
   font-weight: bolder;
-  font-size: .8rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 20px;
@@ -51,31 +51,36 @@
     width: 55%;
     margin: 0 auto;
   }
+  .form label {
+    display: block;
+    font-size: 0.7em;
+    margin-bottom: 5px;
+    color: var(--dark);
+  }
 
   .formparagraph {
-    display:flex;
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin: 5px 0 20px 0;
   }
-  .formparagraph>span {
+  .formparagraph > span {
     margin-left: 9px;
   }
-  .form > button{
+  .form > button {
     width: 60%;
-    margin:  0 auto;
+    margin: 0 auto;
     font-size: 1.2rem;
   }
 
-
-  @media screen and (min-width: 765px){
-    .form{
+  @media screen and (min-width: 765px) {
+    .form {
       width: 55%;
     }
-   .form > input, .form > button{
-    padding:2%;
-    border:0.2px solid var(--dark);
+    .form > input,
+    .form > button {
+      padding: 2%;
+      border: 0.2px solid var(--dark);
     }
-  
   }
 }
