--- a/src/components/user/user.module.css
+++ b/src/components/user/user.module.css
@@ -1,108 +1,111 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.544);
-    display: none;
-    align-items: center;
-    justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.544);
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .open {
-    display: flex;
+  display: flex;
 }
 
 .modalContent {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--light);
-    padding: 10px 5px;
-    border-radius: 4px;
-    text-align: center;
-    width: 90%;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--light);
+  padding: 10px 5px;
+  border-radius: 4px;
+  text-align: center;
+  width: 90%;
 }
 
 .close {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .closeBtn {
-    position: fixed;
-    margin: 0;
-    padding: 1%;
-    background-color: transparent;
-    color: var(--dark);
-    font-weight: bold;
+  position: fixed;
+  margin: 0;
+  padding: 1%;
+  background-color: transparent;
+  color: var(--dark);
+  font-weight: bold;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: 20px auto;
-    font-size: 1.4rem;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 20px auto;
+  font-size: 1.4rem;
+  justify-content: center;
 }
 
 .form button {
-    width: 60%;
-    margin: 0 auto;
-    font-size: 1rem;
-    background-color: var(--blue);
-    color: var(--light);
+  width: 60%;
+  margin: 0 auto;
+  font-size: 1rem;
+  background-color: var(--blue);
+  color: var(--light);
 }
 
 .form input {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
-.errorMessage{
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    text-align: center;
+.errorMessage {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    color: var(--dark);
-    border-radius: 7px;
-    padding: 10px;
-    background-color: var(--light);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  color: var(--dark);
+  border-radius: 7px;
+  padding: 5px;
+  background-color: var(--light);
+  width: 100%;
 }
 
 .card p {
-    margin: 10px 0;
-    text-transform: capitalize;
-    font-size: 1em;
+  margin: 10px 0;
+  text-transform: capitalize;
+  font-size: 1em;
 }
-
+.card .contrNumb {
+  font-size: 0.7em;
+}
 .profilePic {
-    border-radius: 50px;
-    background-color: var(--blue);
-    width: 40px;
-    height: 40px;
-    margin: 0 auto;
+  border-radius: 50px;
+  background-color: var(--blue);
+  width: 40px;
+  height: 40px;
+  margin: 0 auto;
 }
-
 
 .updateBtn {
-    width: 60%;
-    background-color: var(--blue);
-    margin: 10px auto;
-    color: var(--light);
+  width: 60%;
+  background-color: var(--blue);
+  margin: 15px auto;
+  color: var(--light);
 }
 
 @media screen and (min-width: 600px) {
+  .card {
+    width: 60%;
+  }
 
-
-    .updateBtn {
-        width: 30%;
-        margin: 0 auto;
-        padding:1%;
-    }
+  .updateBtn {
+    width: 40%;
+    padding: 2%;
+  }
 }
